# MirrodOS

./: .clang-format  CMakeLists.txt
Kernel/: CMakeLists.txt  kernel_limine.ld
Kernel/include/: assert.h  kernel.h  kvspace.h  memory.h  pmm.h  riscv.h  trap.h  uart.h  vmm.h
Kernel/include/devices/: device.h  plic.h  uart.h  virtio_mmio.h
Kernel/include/devices/device_tree/: blob.h
Kernel/include/devices/virtio/: blk.h  block.h  mmio.h  virtio_mmio.h
Kernel/include/fmt/: print.h
Kernel/include/limine/: platform_info.h  platfrom_info.h
Kernel/include/types/: bump_alloc.h  error.h  generic_arena.h  number.h  slab.h  str_view.h  view.h
Kernel/src/: kernel_entry.c  kvspace.c  memory.c  pmm.c  riscv.c  trap.c  uart.c  vmm.c
Kernel/src/asm/: trap.s
Kernel/src/devices/: device.c  plic.c  uart.c  virtio_mmio.c
Kernel/src/devices/device_tree/: blob.c
Kernel/src/devices/virtio/: blk.c  mmio.c  virtio_mmio.c
Kernel/src/fmt/: print.c
Kernel/src/limine/: platform_info.c
Kernel/src/types/: bump_alloc.c  error.c  generic_arena.c  slab.c  str_view.c
Scripts/: build_iso.sh  limine.conf  qemu.sh
